--- a/ch3-1.html
+++ b/ch3-1.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
-<title>更換文字顏色</title>
-<meta charset="utf-8">
-<style>
-    .c1 {
-        color:blue;
-    }
-    .c2 {
-        color:red;
-    }
-</style>
-<script language="javascript">
-function changeh1(){
-    document.getElementById("myh1").className="c2";
-}
-</script>
+    <title>更換文字顏色</title>
+    <meta charset="utf-8">
+    <link href="css\ex3.css" rel="stylesheet" type="text/css">
+    <script language="javascript">
+        function changeh1() {
+            document.getElementById("myh1").className = "c2";
+        }
+
+        function changeh2() {
+            document.getElementById("myh2").className = "c2";
+        }
+
+        function changeh3() {
+            document.getElementById("myh2").className = "c3";
+        }
+    </script>
+
+
 </head>
+
 <body>
-<h1 id="myh1" class="c1" onclick="changeh1()">點我改變顏色</h1>
+    <h1 id="myh1" class="c1" onclick="changeh1()">點我改變顏色</h1>
+    <h1 id="myh2" class="c2" onclick="changeh3()">點我改變顏色</h1>
 </body>
+
 </html>
