Signed-off-by: 敏倫 <laurence871102@gmail.com>

--- a/ch3-1.html
+++ b/ch3-1.html
@@ -4,7 +4,19 @@
 <head>
     <title>更換文字顏色</title>
     <meta charset="utf-8">
-    <link href="css\ex3.css" rel="stylesheet" type="text/css">
+    <style>
+        .c1 {
+            color: blue;
+        }
+
+        .c2 {
+            color: red;
+        }
+
+        .c3 {
+            color: purple;
+        }
+    </style>
     <script language="javascript">
         function changeh1() {
             document.getElementById("myh1").className = "c2";
