Signed-off-by: 敏倫 <laurence871102@gmail.com>

--- a/ch3-3.html
+++ b/ch3-3.html
@@ -11,7 +11,7 @@
     </style>
     <script language="javascript">
         function changeImg() {
-            document.getElementById("pic").innerHTML = "<img src='img/2.jpg'>";
+            document.getElementById("pic").innerHTML = "<img src='img/iphone 11.jpg'>";
         }
     </script>
 </head>
@@ -19,7 +19,7 @@
 <body>
     <h1>點選下圖更換圖片</h1>
     <div id="pic" onclick="changeImg()">
-        <img src="img/1.jpg">
+        <img src="img/iPhoneX.jpg">
     </div>
 </body>
 
